# firedancer

./: CLAUDE.md
SR/: Architecture.md  CRITICAL_FINDINGS_SUMMARY.md  Checklist.md  Checklist_BB.md  Checklist_Old.md  Consensus.md  Cryptography.md  Differential_Fuzzing_Targets.md  DoS_Mitigations.md  Feature_Gate_Manual_Review.md  Feature_Gate_Review.md  FiredancerLocalnetSetup.md  Frankendancer_vs_Firedancer.md  Fuzz_Targets.md  Fuzzing.md  Fuzzing_Triage_Guide.md  IPC_Messaging.md  Memory_Safety.md  Network_Layer.md  NextSteps16Apr.md  README.md  SECURITY_ANALYSIS.md  SECURITY_REVIEW_SUMMARY.md  Scope.md  State_Management.md  TestCluster.md  Transaction_Processing.md  checklist_v1.md  sBPF_VM_Runtime.md  threat_model_2.md
SR/Findings/Archive/: CONS-002_Ghost_Switch_Check_NULL_Deref.md  CONSENSUS-002_Equivocation_Chunk_Overwrite.md  CONSENSUS-002_Equivocation_Proof_Censorship_via_Wallclock_Manipulation.md  CONSENSUS-003_Epoch_Voter_Desync.md  CONSENSUS-004_FEC_Equivocation_Non_Detection.md  DOS-001_Compression_Bomb_Vulnerability.md  DOS-001_Quadratic_Validation_Complexity.md  DOS-002_Missing_Tile_Watchdog.md  DOS-003_Delayed_CU_Check_In_Linear_Segments.md  DOS-003_Transaction_Crash_Circuit_Breaker.md  DOS-004_TAR_Archive_Bomb.md  (+14 more)
SR/Findings/PoC/CONSENSUS-002/: .gitignore  Cargo.toml  MANUAL_TESTING.md  QUICKSTART.md  README.md
SR/Findings/PoC/CONSENSUS-002/src/: main.rs
SR/PriorAudits/: Atredis_Partners-Firedancer_v0.1_Audit.txt  Cure53-GUI_HTTP_Audit.txt  Cure53-firedancer_metrics_audit.txt  Neodyme-Firedancer_v0.1_Audit.txt  Neodyme-Firedancer_v0.4_Audit.txt
(+39 files in other folders)
